progreso en taller, molde seleccionable, text renderer

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </div>
             </div>
         </div>
-        <div class="login-container">
+        <div class="login-container fade-in">
             <h1>Log-in</h1>
-            <div class="game-container fade-in">
+            <div class="game-container fade-in-delay">
                 <iframe class="game-frame" id="" src="src/index.html" name="" frameborder="0" marginheight="0" scrolling="no"></iframe>
             </div>
         </div>
